# chinook-agent-new

./: README.md  agent.md  agent.py  fastapi_backend.py  pyproject.toml
utils/: prompts.py  sql_utils.py
